FIX ALL THE THINGS (testwise)
I did not expect to have to write so many macros just to test this
properly.  But it seems like the only way to ensure that variables are
set to the defaults and that there is no variation.  Now I understand
why reproducible builds are so difficult.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
     - env: EVM_EMACS=emacs-git-snapshot-travis
 
 script:
-  lsb_release -a && test/run-tests.sh
+  lsb_release -a && test/run
 
 # Local Variables:
 # indent-tabs-mode: nil
