Don't test on older Emacs versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
   # - EVM_EMACS=emacs-24.1-travis EMACS_LINT_IGNORE=1
   # - EVM_EMACS=emacs-24.2-travis EMACS_LINT_IGNORE=1
   # - EVM_EMACS=emacs-24.3-travis
-  - EVM_EMACS=emacs-24.4-travis
-  - EVM_EMACS=emacs-24.5-travis
+  # - EVM_EMACS=emacs-24.4-travis
+  #  - EVM_EMACS=emacs-24.5-travis
   - EVM_EMACS=emacs-25.1-travis
   - EVM_EMACS=emacs-25.2-travis
   - EVM_EMACS=emacs-git-snapshot-travis
