--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ before_install:
 
   - evm config path /tmp
   - evm install $EVM_EMACS --use --skip
+  
+  # Use cask to install development dependencies
+  - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
+  - export PATH=$HOME/.cask/bin:$PATH
+  - cask
 
 env:
   # - EVM_EMACS=emacs-24.1-travis EMACS_LINT_IGNORE=1
@@ -18,13 +23,13 @@ env:
   - EVM_EMACS=emacs-25.1-travis
   - EVM_EMACS=emacs-25.2-travis
   - EVM_EMACS=emacs-git-snapshot-travis
-
+  
 matrix:
   allow_failures:
     - env: EVM_EMACS=emacs-git-snapshot-travis
 
 script:
-  lsb_release -a && test/run --debug
+  cask exec test/run --debug
 
 # Local Variables:
 # indent-tabs-mode: nil
