--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,35 @@
+# * test.yml --- Test Emacs packages using makem.sh on GitHub Actions
+
+# https://github.com/alphapapa/makem.sh
+
 # Based on Steve Purcell's examples at
 # <https://github.com/purcell/setup-emacs/blob/master/.github/workflows/test.yml>,
 # <https://github.com/purcell/package-lint/blob/master/.github/workflows/test.yml>.
+
+# * License:
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+# * Code:
 
 name: "CI"
 on:
   pull_request:
   push:
-    # branches:
-    #   - master
+    # Comment out this section to enable testing of all branches.
+    branches:
+      - master
 
 jobs:
   build:
@@ -23,8 +45,8 @@ jobs:
       with:
         version: ${{ matrix.emacs_version }}
 
-    - uses: actions/checkout@v1
-    
+    - uses: actions/checkout@v2
+
     - name: Install sandbox script
       run: |
         curl -o $GITHUB_WORKSPACE/emacs-sandbox.sh \
@@ -38,10 +60,14 @@ jobs:
 
     # The "all" rule is not used, because it treats compilation warnings
     # as failures, so linting and testing are run as separate steps.
-      
+
     - name: Lint
       run: ./makem.sh -vv --sandbox-dir=$SANDBOX_DIR lint
 
     - name: Test
-      if: always()  # See <https://github.community/t5/GitHub-Actions/continue-on-error-allow-failure-UI-indication/m-p/37182#M2833>
+      if: always()  # Run test even if linting fails.
       run: ./makem.sh -vv --sandbox-dir=$SANDBOX_DIR test
+
+# Local Variables:
+# eval: (outline-minor-mode)
+# End:
