--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 # * test.yml --- Test Emacs packages using makem.sh on GitHub Actions
 
-# https://github.com/alphapapa/makem.sh
+# URL: https://github.com/alphapapa/makem.sh
+# Version: 0.2
+
+# * Commentary:
 
 # Based on Steve Purcell's examples at
 # <https://github.com/purcell/setup-emacs/blob/master/.github/workflows/test.yml>,
@@ -39,6 +42,7 @@ jobs:
       matrix:
         emacs_version:
           - 26.3
+          - 27.1
           - snapshot
     steps:
     - uses: purcell/setup-emacs@master
@@ -47,26 +51,24 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - name: Install sandbox script
-      run: |
-        curl -o $GITHUB_WORKSPACE/emacs-sandbox.sh \
-          https://raw.githubusercontent.com/alphapapa/emacs-sandbox.sh/master/emacs-sandbox.sh
-        chmod +x $GITHUB_WORKSPACE/emacs-sandbox.sh
-        echo ::add-path::$GITHUB_WORKSPACE
-        echo ::set-env name=SANDBOX_DIR::$(mktemp -d)
-
     - name: Initialize sandbox
-      run: ./makem.sh -vv --sandbox-dir=$SANDBOX_DIR --auto-install --install package-lint
+      run: |
+        SANDBOX_DIR=$(mktemp -d) || exit 1
+        echo "SANDBOX_DIR=$SANDBOX_DIR" >> $GITHUB_ENV
+        ./makem.sh -vv --sandbox=$SANDBOX_DIR --install-deps --install-linters
 
     # The "all" rule is not used, because it treats compilation warnings
     # as failures, so linting and testing are run as separate steps.
 
     - name: Lint
-      run: ./makem.sh -vv --sandbox-dir=$SANDBOX_DIR lint
+      # NOTE: Uncomment this line to treat lint failures as passing
+      #       so the job doesn't show failure.
+      continue-on-error: true
+      run: ./makem.sh -vv --sandbox=$SANDBOX_DIR lint
 
     - name: Test
       if: always()  # Run test even if linting fails.
-      run: ./makem.sh -vv --sandbox-dir=$SANDBOX_DIR test
+      run: ./makem.sh -vv --sandbox=$SANDBOX_DIR test
 
 # Local Variables:
 # eval: (outline-minor-mode)
